--- a/README.html
+++ b/README.html
@@ -422,7 +422,18 @@ code.language-yaml {
 </ul></li>
 </ul></li>
 </ul></li>
+<li>Misc.
+<ul>
+<li><img src="hvk_other/sampler2.PNG" height="220"></li>
+<li><img src="hvk_other/sampler1.PNG" width="320"> <img src="hvk_other/sampler3.PNG" width="320"></li>
+</ul></li>
 </ol>
+<h2 id="at-microsoft">At Microsoft</h2>
+<ul>
+<li><img src="tracking/SFR_VisualPlace_2.JPG" height="320"></li>
+<li><img src="tracking/bendphys2.JPG" width="320"></li>
+<li><img src="mapping/phys_play.jpg" width="320"> <img src="mapping/pruning_occup.jpg" width="320"></li>
+</ul>
 <h2 id="at-guerrila-games">At Guerrila Games</h2>
 <ol type="1">
 <li>AI environment-aware physical behavior: <a href="https://www.youtube.com/watch?v=_mXYAPUIAqg">Video</a>
@@ -475,7 +486,10 @@ code.language-yaml {
 <ul>
 <li><img src="old/bigfoot_1.png" height="240"> <img src="old/bigfoot_2.png" height="240"></li>
 </ul></li>
-<li><a href="https://gitlab.com/jadnohra/jad-pre-2015-dabblings/tree/master/Labs/Bigeye/src/BE">Bigeye on gitlab</a></li>
+<li><a href="https://gitlab.com/jadnohra/jad-pre-2015-dabblings/tree/master/Labs/Bigeye/src/BE">Bigeye on gitlab</a>
+<ul>
+<li><img src="old/bigeye_1.png" width="320"></li>
+</ul></li>
 </ul></li>
 </ol>
 <h2 id="problem-solving-approach">Problem Solving Approach</h2>
