--- a/README.html
+++ b/README.html
@@ -215,55 +215,10 @@ code.language-yaml {
     <body for="html-export">
       <div class="mume markdown-preview   ">
       <h1 id="interview-bmw">Interview BMW</h1>
-<h2 id="chosen-approach-for-the-interview">Chosen Approach for the Interview</h2>
-<p>Two options</p>
-<ol type="1">
-<li>Traditional technical interview preparation</li>
-<li>What gives the best picture of my profile
-<ul>
-<li>Story with Lyft and William</li>
-</ul></li>
-</ol>
-<p>I decided to take option 2, because</p>
-<ol type="1">
-<li>This time, I have very little time to prepare</li>
-<li>Too ambitious work at AID, toughest timelines I ever hard -&gt; take my work home
-<ul>
-<li>A bit of CS problem solving prep on <a href="https://auth.geeksforgeeks.org/user/Jad%20Nohra/practice/">Geeksforgeeks</a>
-<ul>
-<li><img src="prep/geeks_prep.png" width="480"></li>
-<li>Notebook</li>
-</ul></li>
-<li>Did not manage to do much more</li>
-</ul></li>
-<li>There are way too many topics that would need de-rusting
-<ul>
-<li>example: smart pointers 10 years ago</li>
-<li><img src="old/smart_ptr_1.png" height="240"> <img src="old/smart_ptr_2.png" height="240"></li>
-<li><a href="https://gitlab.com/jadnohra/jad-pre-2015-dabblings/blob/master/Labs/Bigeye/src/BE/smart_ptr.h">Bigeye lib on gitlab</a></li>
-</ul></li>
-<li>Option 1 worked at AID, partially due to the offline tech task
-<ol type="1">
-<li>Fits my &#x2018;French system&#x2019; engrained way of working</li>
-<li>But I am now working on improving this
-<ul>
-<li>Take chances at work for live deep thinking &amp; collaboration</li>
-</ul></li>
-<li>AID offline tech task (this is OK because it has been leaked, and we are changing it)
-<ul>
-<li><a href="https://gitlab.com/jadnohra/test_AID">Submitted on gitlab</a></li>
-<li><img src="prep/aid_test_1.png" height="240"> <img src="prep/aid_test_2.png" height="240"></li>
-<li><img src="prep/aid_test_3.png" height="240"> <img src="prep/aid_test_4.png" height="240"></li>
-</ul></li>
-</ol></li>
-</ol>
-<p>Note: Option 1 works great with profiles and personalities such as Jacobo</p>
-<p><strong>I take the responsibility upon myself to spend interview time taking my approach</strong>. In the worst case it will be deemed a no-pass, but that&#x2019;s life.</p>
 <h2 id="at-havok">At Havok</h2>
 <ol type="1">
 <li>Nintendo WiiU math library
 <ol type="1">
-<li>Very tight deadline, with failed attempts, and important business deal. On Christmas (again!)</li>
 <li>Instruction-level ARM (handicapped two-float SIMD)</li>
 <li>Buggy compiler in terms of performance optimization
 <ul>
@@ -272,8 +227,10 @@ code.language-yaml {
 </ol></li>
 <li>Physics-2014 contact solver perfromance
 <ol type="1">
-<li>Outdated expert mental models of CPUs</li>
-<li>Benchmarking ignoring real data</li>
+<li>Mental models of CPUs at race with CPU improvements
+<ul>
+<li>Benchmarking ignoring real data becomes dangerous</li>
+</ul></li>
 <li>Research (https://www.agner.org/optimize/#manuals) -&gt; branch prediction as main actor in this context</li>
 <li>Proof using counter example : <img src="netw/pyramid_split.png" width="240"></li>
 <li>New (intrusive) optimization : coupling geometry processing to solver using data rearrangement</li>
@@ -350,7 +307,7 @@ code.language-yaml {
 </ul></li>
 <li>TOI Argument
 <ul>
-<li>Open problem ever since the &#x2018;toi&#x2019; engine was abandoned</li>
+<li>Open problem ever since the &#x2018;TOI&#x2019; engine was abandoned</li>
 <li>Multiple attempts that replaced artifacts with other artifacts</li>
 <li>Proved that the problem is not solvable: <a href="hvk_other/toiarg1.pdf">TOI argument</a>
 <ul>
@@ -360,12 +317,10 @@ code.language-yaml {
 </ul></li>
 <li>HKDS
 <ul>
-<li>Initial business need -&gt; <a href="hkds/ds_overview1.pdf">HKDS overview</a>
+<li>Overview : <a href="hkds/ds_overview1.pdf">HKDS overview</a>
 <ul>
 <li><img src="hkds/overview_screen1.png" width="320"> <img src="hkds/overview_screen2.png" width="320"></li>
 </ul></li>
-<li>Ambitious project
-<ul>
 <li>A high level view of the approaches
 <ul>
 <li><img src="hkds/ds_simple.png" width="480"><br>
@@ -375,7 +330,7 @@ code.language-yaml {
 <ul>
 <li><img src="hkds/detail_screen1.png" width="640"></li>
 </ul></li>
-<li>fast forward: videos
+<li>Fast forward: videos of results
 <ul>
 <li><a href="https://www.dropbox.com/home/business/HifiSolver?preview=arm.mp4">Titan arm video</a>
 <ul>
@@ -419,7 +374,6 @@ code.language-yaml {
 <li>Terminal <code>python trace.py -test</code><br>
 </li>
 <li><a href="https://github.com/jadnohra/trace">Trace user manual</a></li>
-</ul></li>
 </ul></li>
 </ul></li>
 <li>Misc.
@@ -490,6 +444,10 @@ code.language-yaml {
 <ul>
 <li><img src="old/bigeye_1.png" width="320"></li>
 </ul></li>
+<li>example: smart pointers 10 years ago
+<ul>
+<li><img src="old/smart_ptr_1.png" height="240"> <img src="old/smart_ptr_2.png" height="240"></li>
+</ul></li>
 </ul></li>
 </ol>
 <h2 id="problem-solving-approach">Problem Solving Approach</h2>
@@ -535,19 +493,8 @@ code.language-yaml {
 </ol></li>
 </ol></li>
 </ol>
-<h1 id="appendix">Appendix</h1>
 <h2 id="miscellaneous">Miscellaneous</h2>
 <ul>
-<li>Big O prep
-<ul>
-<li>Remembered notes on asymptotic notation in GK</li>
-<li>Database of integer sequences (know from &#x2018;The Cauchy-Schwarz Masterclass&#x2019;)</li>
-</ul></li>
-<li>Concurrency prep
-<ul>
-<li><img src="prep/semaph_prep.png" width="320"></li>
-<li><a href="./prep/cpp">cpp prep</a></li>
-</ul></li>
 <li>Existing attempts
 <ul>
 <li>http://chrishecker.com/The_mixed_linear_complementarity_problem</li>
